Fixed red text mainheading

--- a/styles.css
+++ b/styles.css
@@ -44,7 +44,7 @@ h2 {
 
 #mainHeading {
 	
-	background-color: #ba453f;
+	background-color: red;
 	color: #f5c18b;
 	width: 90%;
 	padding: 10px 20px;
